# v2ray_to_sing_box_config

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  resource.h  sing_box.manifest  sing_box_config.code-workspace  vcpkg.json  win_exe.rc
.github/workflows/: cmake.yml  release.yml
vcpkg/ports/argh/: portfile.cmake
vcpkg_ports/argh/: portfile.cmake
